--- a/simplepin/Base.lproj/Main.storyboard
+++ b/simplepin/Base.lproj/Main.storyboard
@@ -102,7 +102,6 @@
                                     <outlet property="tagsLabel" destination="CeL-bO-aBr" id="Fkc-gJ-OJy"/>
                                     <outlet property="titleLabel" destination="yE0-JA-BAm" id="sWc-yY-67H"/>
                                     <outlet property="unreadIndicator" destination="E8g-6z-I7F" id="1c5-XF-gne"/>
-                                    <segue destination="fz4-Ky-RTb" kind="presentation" identifier="openEditBookmarkModal" id="Ew9-Yc-x3c"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -131,6 +130,7 @@
                         <outlet property="loadingPosts" destination="Ewi-PO-CL4" id="3Ch-eQ-vlt"/>
                         <outlet property="loadingPostsSpinner" destination="IHb-3h-oxh" id="D9A-Sd-D5G"/>
                         <segue destination="gYv-09-0z0" kind="presentation" identifier="openLoginModal" animates="NO" id="y9u-Cf-4Jy"/>
+                        <segue destination="fz4-Ky-RTb" kind="presentation" identifier="openEditBookmarkModal" id="cVe-US-dkN"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9aY-8f-w8t" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -887,6 +887,6 @@
         <image name="ic_settings" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ew9-Yc-x3c"/>
+        <segue reference="cVe-US-dkN"/>
     </inferredMetricsTieBreakers>
 </document>
